Add TouchHoldHandler and TouchUpHandler properties

--- a/GongSolutions.Wpf.DragDrop/GongSolutions.Wpf.DragDrop (NET4).csproj
+++ b/GongSolutions.Wpf.DragDrop/GongSolutions.Wpf.DragDrop (NET4).csproj
@@ -79,6 +79,7 @@
     <Compile Include="IDragSource.cs" />
     <Compile Include="IDropTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\InputUtilities.cs" />
     <Compile Include="Utilities\ItemsControlExtensions.cs" />
     <Compile Include="Utilities\TypeUtilities.cs" />
     <Compile Include="Utilities\VisualTreeExtensions.cs" />
